--- a/app.css
+++ b/app.css
@@ -1,15 +1,43 @@
 body {
   /* background-color: pink; */
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+
+h1 {
+  font-size: 26px;
+  color: #009900;
+}
+
+h2 {
+  font-size: 20px;
+  color: gray;
+  font-style: italic;
+}
+
+
+/* |HEADER| */
+.header {
+  display: flex;
+  padding: 2px;
+
+  margin: 2px;
+
+}
+
+.announcements, .alerts {
+  display: flex;
 }
 
 
 /* |BUTTONS| */
+
 
 #announcements {
   width: 150px;
   height: 100px;
 
   background: #009900;
+  color: white;
 
   border: 1px solid #000000;
 
@@ -23,6 +51,7 @@ body {
   height: 100px;
 
   background: #cc0000;
+  color: white;
 
   border: 1px solid #000000;
 
@@ -36,6 +65,7 @@ body {
   height: 100px;
 
   background: #009900;
+  color: white;
 
   border: 1px solid #000000;
 
