--- a/app.css
+++ b/app.css
@@ -4,30 +4,45 @@ body {
 }
 
 h1 {
-  font-size: 26px;
+  font-size: 36px;
   color: #009900;
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 12px;
   color: gray;
   font-style: italic;
+  margin-left: 16px;
+  padding-top: 3%;
 }
 
-
+button {
+  text-align: center;
+}
 /* |HEADER| */
 .header {
   display: flex;
   padding: 2px;
-
   margin: 2px;
 
 }
 
-.announcements, .alerts {
+/* |CONTAINER| */
+.container{
   display: flex;
 }
+.announcements, .alerts {
+  flex-direction: column;
+}
 
+li {
+  padding: 2px;
+  margin-left: 5px;
+}
+
+.photo {
+  border: solid pink 2px;
+}
 
 /* |BUTTONS| */
 
@@ -61,8 +76,8 @@ h2 {
 }
 
 #categoryManagementTemplates, #assortment, #promotion, #pricing, #businessPerformance, #fileCabinet, #modelScheduleUpdates {
-  width: 150px;
-  height: 100px;
+  width: 100px;
+  height: 80px;
 
   background: #009900;
   color: white;
@@ -72,4 +87,8 @@ h2 {
   -moz-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
   -webkit-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
   box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
+
+  flex-direction: column;
+  align-content: center;
+  text-align: center;
 }
