--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 
 }
 
@@ -47,6 +47,13 @@ li {
   display: inline-block;
 }
 
+#logo {
+  display: inline-flex;
+  position: relative;
+  top: 50px;
+  padding: 3px;
+}
+
 /* |BUTTONS| */
 
 
@@ -56,6 +63,7 @@ li {
 
   background: #009900;
   color: white;
+  top: 20px;
 
   border: 1px solid #000000;
 
@@ -72,6 +80,8 @@ li {
   color: white;
 
   border: 1px solid #000000;
+
+  display: inline-flex;
 
   -moz-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
   -webkit-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
